--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "build": "tsc",
-    "locations": "node ./bin/locations.js"
+    "locations": "node ./bin/locations.js",
+    "restaurants": "node ./bin/restaurants.js"
   },
   "dependencies": {
     "bottleneck": "^2.19.5",
@@ -15,11 +16,16 @@
     "ngeohash": "^0.6.3",
     "pg": "^8.7.3",
     "pg-format": "^1.0.4",
-    "typescript": "^4.6.2"
+    "tough-cookie": "^4.0.0",
+    "typescript": "^4.6.2",
+    "util": "^0.12.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/ngeohash": "^0.6.4",
     "@types/pg": "^8.6.4",
-    "@types/pg-format": "^1.0.2"
+    "@types/pg-format": "^1.0.2",
+    "@types/tough-cookie": "^4.0.1",
+    "@types/uuid": "^8.3.4"
   }
 }
