--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@types/pg": "^8.6.4",
     "@types/pg-format": "^1.0.2",
     "@types/tough-cookie": "^4.0.1",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
